[package]
name = "surreal_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
serde = { version = "1.0.171", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
